UIHeader: Set z-index on title to avoid glitches with positioned content

--- a/src/components/UI/UIHeader.css
+++ b/src/components/UI/UIHeader.css
@@ -80,6 +80,8 @@
 .header-title {
   background-color: rgba(253, 253, 253, 0.95);
   box-shadow: 0 0 0 1px #fdfdfd;
+  position: relative;
+  z-index: 100;
 }
 .header-title h1 {
   font-size: calc(2.65em + 6*(100vw - 400px)/(1250 - 400));
